--- a/index.html
+++ b/index.html
@@ -25,5 +25,9 @@ iframe{
 
 <iframe src="https://shilaarts.blogspot.com/" frameborder="0"></iframe>
 
+    
+    
+    <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://iclickcdn.com/tag.min.js',4933440,document.body||document.documentElement)</script>
+
 </body>
 </html>
